# ur3_pg70

./: README.md  inverse_navigation.launch  joy_test.py  rrt.py  simualator.launch  test_command.py
lkar_testing/: CMakeLists.txt  package.xml
lkar_testing/src/: add_object.cpp  check_collision.cpp  compiler_test.cpp  move_position_goal.cpp  remove_object.cpp
ur3_moveit_config/: demo.py  demo_home.py  demo_random.py  joy_test_ps3.py  joy_test_xbox.py  new_test_service.py  package.xml  test_command.py
ur3_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ur3_pg70.srdf
ur3_moveit_config/launch/: demo.launch  move_group.launch  navigation.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
ur_description/launch/: test_gripper.launch  ur3_upload.launch
ur_description/urdf/: ur3_pg70.urdf.xacro
